# from-zero-to-halo2

./: .gitignore  LICENSE  README.md  package.json
app/: layout.config.tsx
app/(home)/: page.tsx
content/docs/: index.mdx  meta.json
content/docs/part1/: chap1.mdx  chap10.mdx  chap11.mdx  chap2.mdx  chap3.mdx  chap4.mdx  chap5.mdx  chap6.mdx  chap7.mdx  chap8.mdx  chap9.mdx  meta.json
content/docs/part2/: chap12.mdx  chap13.mdx  chap14.mdx  chap15.mdx  chap16.mdx  chap17.mdx  chap18.mdx  chap19.mdx  chap20.mdx  chap21.mdx  chap22.mdx  meta.json
content/docs/part3/: meta.json
content/docs/sec1/: chap1.mdx  chap11.mdx  chap2.mdx  chap3.mdx  chap8.mdx  chap9.mdx  meta.json
content/docs/sec2/: meta.json
content/docs/sec_one_rust_basics/: chap1.mdx  chap10.mdx  chap4.mdx  chap5.mdx  chap7.mdx  meta.json
content/docs/sec_three_halo2_mini_app/: meta.json
content/docs/sec_two_halo2_basics/: meta.json
examples/my_first_circuit/: Cargo.toml
hello_halo2/: Cargo.toml
practices/chapter2/: Cargo.toml
practices/chapter2/exercises/: control_flow.rs  functions.rs  integration.rs  variables.rs
practices/my_first_circuit/src/: main.rs
